fixed card button top to page,iframe on mobile,learn more to read more button

--- a/main.css
+++ b/main.css
@@ -38,12 +38,6 @@
     user-select: none;
 }
 
-@media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-    font-size: 3.5rem;
-    }
-   
-}
 
 @media screen and (max-width: 768px) {
     .hero {
@@ -57,9 +51,17 @@
     .card {
         border: none;
     }
-
+    
+    .i-container {
+        padding-top: 56%;
+    }
 }
 
+@media (min-width: 768px) {
+    .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+    }
+}
 
 
 
